# unity-control-protocol

./: .gitignore  .impeccable.md  CHANGELOG.md  CONTRIBUTING.md  PROJECT.md  README.md  version.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: discord-notify.yml  pages.yml  release.yml  validate.yml
cli/: Cargo.toml
cli/src/: bridge_lifecycle.rs  bridge_package.rs  client.rs  config.rs  discovery.rs  editor_runtime.rs  error.rs  main.rs  output.rs  protocol.rs  release_check.rs
cli/src/commands/: asset.rs  bridge.rs  build.rs  compile.rs  connect.rs  doctor.rs  editor.rs  exec.rs  files.rs  frame.rs  install.rs  logs.rs  material.rs  mod.rs  object.rs  packages.rs  play.rs  prefab.rs  profile.rs  profiler.rs  scene.rs  screenshot.rs  script.rs  settings.rs  shader.rs  snapshot.rs  tests.rs  vcs.rs
cli/src/commands/references/: engine.rs  mod.rs
docs/agents/: skills.md
docs/authoring/: assets.md  materials.md  objects.md  references.md  scenes.md  scripting.md
docs/commands/: assets.md  build.md  connection.md  editor.md  files.md  materials.md  media.md  objects.md  overview.md  playmode.md  prefabs.md  scenes.md  settings.md  testing.md  vcs.md
docs/getting-started/: installation.md  introduction.md  quickstart.md
npm/: .npmignore  .npmrc  README.md  package-lock.json  package.json  pnpm-lock.yaml
scripts/: build.sh  clawhub-skill.mjs  qa-playground.ps1  smoke-dev.ps1  sync-version.mjs  unity-version-matrix.ps1  validate-release.ps1
website/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
(+117 files in other folders)
